--- a/activity.html
+++ b/activity.html
@@ -18,16 +18,18 @@
             <a class="navtext" href="/achievements.html" >achievements</a>
             <a class="navtext" href="/activity.html">activity</a>
         </nav>
-        <div data-aos="fade-up"  class="hero-section">
+        <div data-aos="fade-up" class="hero-section">
             <div class="project-list">
                 <div class="project-date">Internship • Backend</div>
                 <h2 class="project-title">Developer at Million Token</h2>
                 <p class="project-desc">In early Aug 2021 I got a chance to intern at Million Token, a decentralised crypto currency, where I worked as one of their many backend developers.<br><br>My main task was to maitain the security of their Discord community and increase the satisfaction of user experience within the guild. Contributions I have made includes the development of their server statistics channels, bug fixes to their Discord bot, and bug fixes to their social media monitors. Their website can be viewed <a style="font-weight: 800; text-decoration: none; color: #51545b;" href="https://milliontoken.org/">here</a></p>
             </div>
             <div class="project-list">
-                <div class="project-date">Personal Project • Branding</div>
-                <h2 class="project-title">ryanツ's flip leads</h2>
-                <p class="project-desc">This agency started in early May 2021 where I provide weekly indications on profitable "lowkey" items that are likely to have a high resell price.<br></br>With experience dating back to 2021, I have accumulated over 30 satisfied clients where long term relationships have been established. This service is offered as a monthly subscription which varies in price depending on group size and other factors, thus a one-on-one consultation is offered to come up with a quote. The Discord server to this project can be viewed <a style="font-weight: 800; text-decoration: none; color: #51545b;" href="https://discord.gg/NNNYfZGn6P" target=”_blank”>here</a></p>
+                <a class="project-header" href="https://twitter.com/kairalabss" target=”_blank”>
+                    <div class="project-date">Personal Project • Branding</div>
+                    <h2 class="project-title">Kaira Labs</h2>
+                </a>
+                <p class="project-desc">B2B IaaS startup providing leads on non-sneaker arbitrageable products. This company started in early May 2021, where indications are sent out to groups on profitable "lowkey" items that are likely to have a high resell price.<br></br>By leveraging this company with the expertise of a dedicated PR officer, we have accumulated over 30 satisfied clients and have established many long-term relationship. Services are offered as a monthly subscription with tailored pricing based on factors such as group size and group renewal price. The Discord server to this company can be viewed <a style="font-weight: 800; text-decoration: none; color: #51545b;" href="https://discord.gg/NNNYfZGn6P" target=”_blank”>here</a></p>
             </div>
         </div>
     </div>
