--- a/index.html
+++ b/index.html
@@ -20,15 +20,24 @@
             <a class="navtext" href="/activity.html">activity</a>
         </nav>
         <div class="hero-section">
-            <h1 data-aos="fade-up" class="name">ryan tang</h1>
-            <p data-aos="fade-up" class="personal-desc">full stack developer and graphic designer from down under 🦘 that makes innovative projects</p>
-            <div data-aos="fade-up" class="status">
-                <img src="./images/ryangif.gif" class="pfp-gif" discord-pfp">
-                <div class="status-text">
-                    <div class="status-update">ryanツ#4649</div>
-                    <div class="bottom-status">📍 syd, aus</div>
+            <div class="main">
+                <div class="left-hero">
+                    <h1 data-aos="fade-up" class="name">ryan tang</h1>
+                    <p data-aos="fade-up" class="personal-desc">full stack developer and graphic designer from down under 🦘 that makes innovative projects</p>
+                    <div data-aos="fade-up" class="status">
+                        <img src="./images/ryangif.gif" class="pfp-gif">
+                        <div class="status-text">
+                            <div class="status-update">ryanツ#4649</div>
+                            <div class="bottom-status">📍 syd, aus</div>
+                        </div>
+                    </div>
+                </div>
+                <div data-tilt data-tilt-scale="1.03" class="right-hero">
+                    <img src="./images/cd.png" class="cdIMG" id="cdImage">
+                    <audio src="K. - Cigarettes After Sex.mp3" id="audioPlayer"></audio>
                 </div>
             </div>
+            
             <div data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" class="socials">
                 <a href="https://github.com/ryanhieutang" target=”_blank” class="social-icons">
                     <img src="./images/github.svg" alt="github">
@@ -46,6 +55,8 @@
             </div>
         </div>
     </div>
+    <script type="text/javascript" src="node_modules/vanilla-tilt/dist/vanilla-tilt.js"></script>   
+    <script src="./script.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>AOS.init();</script>
     <script type="text/javascript" src="https://res.cloudinary.com/veseylab/raw/upload/v1636192990/magicmouse/magic_mouse-1.2.1.cdn.min.js"></script>
