--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="node_modules/vanilla-tilt/dist/vanilla-tilt.js"></script>   
+    <script type="text/javascript" src="vanilla-tilt.js"></script>   
     <script src="./script.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>AOS.init();</script>
