Fixed time to AEST

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="flex flex-row mt-6 text-white gap-[6px] text-sm sm:text-base">
                     <p>it is</p>
                     <p class="text-[#a7afbd] bg-[#adb8cb]/10 p-[1px] rounded-sm w-[160px] sm:w-[180px] text-center whitespace-nowrap">
-                        <span id="time" class="inline-block"></span>
+                        <span id="ausTime" class="inline-block"></span>
                     </p>
                     <p>for me right now</p>
                 </div>
