--- a/projects.html
+++ b/projects.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#769cdd"/>
-  <meta name="description" content="Hey my name is Ryan! Welcome to my engineering/development portfolo."/>
-  <title>Ryan Tang's Portfolio</title>
+  <meta name="description" content="Hey my name is Ryan! Welcome to my engineering/development portfolio."/>
+  <title>Ryan Hieu Tang's Portfolio</title>
   <link href="/src/input.css" rel="stylesheet">
   <link rel="stylesheet" href="/src/build.css">
   <link href="https://cdn.jsdelivr.net/npm/kursor@0.1.6/dist/kursor.min.css" rel="stylesheet">
